--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #282C28 !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, button, input {
+  font-family: 'Roboto', sans-serif;
+}
+
+.MuiLinearProgress-barColorPrimary.MuiLinearProgress-barColorPrimary {
+  background-color:#FFE81F;
+}
+
+.MuiLinearProgress-colorPrimary.MuiLinearProgress-colorPrimary {
+  background-color: rgb(255, 232, 31, 0.3);
 }
